Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/Parens1.out
Parens1.java:12:20: compiler.err.illegal.parenthesized.expression
1 error
