Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/Parens1.java
/*
 * @test /nodynamiccopyright/
 * @bug 4391330
 * @summary compiler accepted (Integer).toString(123)
 * @author gafter
 *
 * @compile/fail/ref=Parens1.out -XDrawDiagnostics Parens1.java
 */

class Parens1 {
    void f() {
        String s = (Integer).toString(123);
    }
}
